WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228811
REGRESSION (
r274038
): Keyframe animation with top/left with percentages fails to animate
https://bugs.webkit.org/show_bug.cgi?id=228811
Summary
REGRESSION (r274038): Keyframe animation with top/left with percentages fails...
elviskang
Reported
2021-08-04 22:08:23 PDT
Online Page:
https://codepen.io/ElvisKang/pen/MWmVZzo
Attachments
patch
(19.98 KB, patch)
2021-08-06 01:35 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-08-05 08:48:07 PDT
<
rdar://problem/81568266
>
Simon Fraser (smfr)
Comment 2
2021-08-05 15:25:04 PDT
Does this affect any live web sites?
Antti Koivisto
Comment 3
2021-08-06 01:35:49 PDT
Created
attachment 435058
[details]
patch
EWS
Comment 4
2021-08-06 06:43:07 PDT
Committed
r280721
(
240312@main
): <
https://commits.webkit.org/240312@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435058
[details]
.
Simon Fraser (smfr)
Comment 5
2021-08-10 12:55:53 PDT
***
Bug 228646
has been marked as a duplicate of this bug. ***
Antoine Quint
Comment 6
2021-09-09 12:25:08 PDT
***
Bug 230106
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug