REGRESSION (r274038): Keyframe animation with top/left with percentages fails to animate https://bugs.webkit.org/show_bug.cgi?id=228811 <rdar://problem/81568266>

Reviewed by Alan Bujtas.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-position/animations/bottom-composition-expected.txt:
* web-platform-tests/css/css-position/animations/left-composition-expected.txt:
* web-platform-tests/css/css-position/animations/right-composition-expected.txt:
* web-platform-tests/css/css-position/animations/top-composition-expected.txt:

Source/WebCore:

r274038 ended up disabling interpolation of percent values for top/left/bottom/right.

Test: animations/top-left-percent-interpolation.html

* animation/CSSPropertyAnimation.cpp:
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):

Enable them.

LayoutTests:

* animations/top-left-percent-interpolation-expected.txt: Added.
* animations/top-left-percent-interpolation.html: Added.


Canonical link: https://commits.webkit.org/240312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280721 268f45cc-cd09-0410-ab3c-d52691b4dbfc